src/fontra/views/editor/editor.css
:root {
  --editor-tool-button-hover-background-color-light: #eee;
  --editor-tool-button-hover-background-color-dark: #333;

  --editor-tool-button-active-background-color-light: #ccc;
  --editor-tool-button-active-background-color-dark: #555;

  --editor-tool-button-selected-background-color-light: #666;
  --editor-tool-button-selected-background-color-dark: #ccc;

  --editor-mini-console-background-color-light: #ddd;
  --editor-mini-console-background-color-dark: #444;

  --editor-mini-console-foreground-color-light: black;
  --editor-mini-console-foreground-color-dark: white;

  --editor-top-bar-background-color-light: #eee;
  --editor-top-bar-background-color-dark: #444;
  --editor-top-bar-border-color-light: #d3d3d3;
  --editor-top-bar-border-color-dark: #2e2e2e;
  --editor-top-bar-link-hover-light: #e1e1e1;
  --editor-top-bar-link-hover-dark: rgb(47, 47, 47);
  --editor-top-bar-height: 35px;
}

:root {
  --editor-tool-button-hover-background-color: var(
    --editor-tool-button-hover-background-color-light
  );
  --editor-tool-button-active-background-color: var(
    --editor-tool-button-active-background-color-light
  );
  --editor-tool-button-selected-background-color: var(
    --editor-tool-button-selected-background-color-light
  );
  --editor-mini-console-background-color: var(
    --editor-mini-console-background-color-light
  );
  --editor-mini-console-foreground-color: var(
    --editor-mini-console-foreground-color-light
  );

  --editor-top-bar-background-color: var(--editor-top-bar-background-color-light);
  --editor-top-bar-border-color: var(--editor-top-bar-border-color-light);
  --editor-top-bar-link-hover: var(--editor-top-bar-link-hover-light);
}

:root.dark-theme {
  --editor-tool-button-hover-background-color: var(
    --editor-tool-button-hover-background-color-dark
  );
  --editor-tool-button-active-background-color: var(
    --editor-tool-button-active-background-color-dark
  );
  --editor-tool-button-selected-background-color: var(
    --editor-tool-button-selected-background-color-dark
  );
  --editor-mini-console-background-color: var(
    --editor-mini-console-background-color-dark
  );
  --editor-mini-console-foreground-color: var(
    --editor-mini-console-foreground-color-dark
  );
  --editor-top-bar-background-color: var(--editor-top-bar-background-color-dark);
  --editor-top-bar-border-color: var(--editor-top-bar-border-color-dark);
  --editor-top-bar-link-hover: var(--editor-top-bar-link-hover-dark);
}

@media (prefers-color-scheme: dark) {
  :root {
    --editor-tool-button-hover-background-color: var(
      --editor-tool-button-hover-background-color-dark
    );
    --editor-tool-button-active-background-color: var(
      --editor-tool-button-active-background-color-dark
    );
    --editor-tool-button-selected-background-color: var(
      --editor-tool-button-selected-background-color-dark
    );
    --editor-mini-console-background-color: var(
      --editor-mini-console-background-color-dark
    );
    --editor-mini-console-foreground-color: var(
      --editor-mini-console-foreground-color-dark
    );
    --editor-top-bar-background-color: var(--editor-top-bar-background-color-dark);
    --editor-top-bar-border-color: var(--editor-top-bar-border-color-dark);
    --editor-top-bar-link-hover: var(--editor-top-bar-link-hover-dark);
  }

  :root.light-theme {
    --editor-tool-button-hover-background-color: var(
      --editor-tool-button-hover-background-color-light
    );
    --editor-tool-button-active-background-color: var(
      --editor-tool-button-active-background-color-light
    );
    --editor-tool-button-selected-background-color: var(
      --editor-tool-button-selected-background-color-light
    );
    --editor-mini-console-background-color: var(
      --editor-mini-console-background-color-light
    );
    --editor-mini-console-foreground-color: var(
      --editor-mini-console-foreground-color-light
    );
    --editor-top-bar-background-color: var(--editor-top-bar-background-color-light);
    --editor-top-bar-border-color: var(--editor-top-bar-border-color-light);
    --editor-top-bar-link-hover: var(--editor-top-bar-link-hover-light);
  }
}

html,
body {
  margin: 0;
  padding: 0;
  height: 100vh;
}

.editor-container {
  display: grid;
  position: relative;
  grid-template-columns: auto 1fr auto;
  grid-template-rows: auto 1fr;
  height: 100%;
  width: 100%;
}

.top-bar-container {
  grid-column: 1 / 4;
  grid-row: 1;
  z-index: 200;
  height: var(--editor-top-bar-height);
  background: var(--editor-top-bar-background-color);
  box-shadow: 0px 0px 5px #0006;
}

.sidebar-container,
.main-container {
  grid-row-start: 2;
  grid-row-end: 3;
}

.sidebar-container {
  z-index: 100;
  background-color: var(--ui-element-background-color);
  height: calc(100vh - var(--editor-top-bar-height));
  width: 0;
  position: relative;
}

:root {
  --sidebar-tab-width: 3em;
  --sidebar-content-width-left: 20em;
  --sidebar-content-width-right: 22em;
  --resize-cursor: col-resize;
}

:root.sidebar-resizing {
  user-select: none;
  -webkit-user-select: none;
  cursor: var(--resize-cursor);
}

.sidebar-container.animating {
  transition: 120ms;
}

.sidebar-container.left.visible {
  width: var(--sidebar-content-width-left);
}

.sidebar-container.right.visible {
  width: var(--sidebar-content-width-right);
}

.main-container {
  position: relative;
  grid-column: 2;
}

.main-content {
  position: relative;
  width: 100%;
  height: 100%;
}

.main-overlay-container {
  position: absolute;
  display: grid;
  grid-template-columns: 3.5em 1fr 3.5em;

  box-sizing: border-box;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;

  pointer-events: none;
}

.tab-overlay-container {
  display: grid;
  gap: 1em;
  padding-top: 1em;
  align-content: start;
}

.tab-overlay-container.left {
  justify-content: start;
  justify-items: start;
}

.tab-overlay-container.right {
  justify-content: end;
  justify-items: end;
}

.sidebar-shadow-box {
  z-index: 10;
  position: absolute;
  display: none;

  box-shadow: 0px 0px 8px #0006;
  top: 0;
  width: 50px; /* arbitrary > blur radius */
  height: 100%;
}

.sidebar-shadow-box.visible {
  display: inherit;
}

.tab-overlay-container.left > .sidebar-shadow-box {
  left: -50px;
}

.tab-overlay-container.right > .sidebar-shadow-box {
  right: -50px;
}

.sidebar-tab {
  display: flex;
  align-items: center;

  z-index: 1; /* below the shadow box but above the tools*/

  box-sizing: border-box;
  width: var(--sidebar-tab-width);
  height: 2.8em;
  background-color: var(--ui-element-background-color);
  box-shadow: 0px 3px 8px #0006;

  cursor: pointer;
  pointer-events: auto;
  user-select: none;

  animation-duration: 120ms;
  animation-direction: alternate;
  animation-timing-function: ease-out;
  animation-iteration-count: 2;
}

.sidebar-tab.selected {
  z-index: 20; /* elevate it above the shadow box */
}

@keyframes tab-slide-out-animation {
  100% {
    width: calc(var(--sidebar-tab-width) + 0.2em);
  }
}

@keyframes tab-slide-in-animation {
  100% {
    width: calc(var(--sidebar-tab-width) - 0.2em);
  }
}

.sidebar-tab:hover {
  animation-name: tab-slide-out-animation;
}

.sidebar-tab.selected:hover {
  animation-name: tab-slide-in-animation;
}

.tab-overlay-container.left > .sidebar-tab {
  border-radius: 0 0.8em 0.8em 0;
  padding-right: 0.25em;
  justify-content: flex-end;
}

.tab-overlay-container.right > .sidebar-tab {
  border-radius: 0.8em 0 0 0.8em;
  padding-left: 0.25em;
  justify-content: flex-start;
}

.tab-overlay-container.right > .sidebar-tab .icon-tabler {
  stroke-width: 1.5px;
}

.sidebar-content {
  display: none;

  box-sizing: border-box;
  height: 100%;
  width: 100%;
}

.sidebar-container.left > .sidebar-content {
  float: right;
  width: var(--sidebar-content-width-left);
}

.sidebar-container.right > .sidebar-content {
  float: left;
  width: var(--sidebar-content-width-right);
}

.sidebar-container > .sidebar-content.selected {
  display: inherit;
}

/* overlay content styling */

.tool-overlay-container {
  display: flex;
  justify-content: center;
  margin: 0;
}

#text-entry-overlay {
  margin: 1em;
}

/* sidebar content styling */

#menu-panel-container {
  position: absolute;
  overflow: hidden;
  width: 100%;
  height: 100%;
}

.sidebar-resize-gutter {
  height: 100%;
  width: 4px;
  cursor: var(--resize-cursor);
  position: absolute;
}

.sidebar-container.left .sidebar-resize-gutter {
  right: -2px;
}

.sidebar-container.right .sidebar-resize-gutter {
  left: -2px;
}

.sidebar-tab > inline-svg {
  display: block;
  width: 2.2em;
  height: 2.2em;
}

.glyphs-navigation {
  display: flex;
  flex-direction: column;
  padding: 0.5em;
}

.canvas-container {
  position: relative; /* for the children */
  width: 100%;
  height: 100%;
  overflow: hidden;
}

#edit-canvas {
  position: absolute; /* but relative to canvas-container */
  padding: 0;
  margin: 0;
  overscroll-behavior: none;
  touch-action: none;
  cursor: default;
  outline: none;
}

.cleanable-overlay.overlay-layer-hidden {
  display: none;
}

.tools-overlay {
  display: flex;
  flex-direction: row;
  gap: 1em;
  padding: 1em;
  position: absolute;
}

.tools-item {
  display: flex;
  background-color: var(--ui-element-background-color);
  border-radius: 0.65em;
  box-shadow: 1px 1px 5px #0006;
  cursor: pointer;
  height: min-content;
  pointer-events: auto;
}

.tool-button,
.subtool-button {
  justify-content: center;
  align-items: center;
  user-select: none;
  background-color: var(--ui-element-background-color);
  fill: var(--foreground-color);
  width: 2.7rem;
  height: 1.9rem;
  padding: 0.1rem;
  transition: 0.15s;
  display: inline-grid;
}

.tool-button:first-child,
.subtool-button:first-child {
  border-radius: 0.65em 0 0 0.65em;
}

.tool-button:last-child,
.subtool-button:last-child {
  border-radius: 0 0.65em 0.65em 0;
}

.subtool-button {
  margin-top: -0.1rem;
  fill: unset;
  background-color: unset;
}

.multi-tool::after {
  position: absolute;
  content: "";
  border-top: 5px solid transparent;
  border-right: 5px solid var(--foreground-color);
  margin-right: -5px;
  margin-left: 2.3rem;
  margin-top: calc(1.9rem - 6px);
  pointer-events: none;
}

.subtool-button:last-child {
  border-radius: 0 0 0.65em 0.65em;
}

.subtool-button:not(:first-child) {
  visibility: hidden;
  transition-duration: 100ms;
  background-color: var(--ui-element-background-color);
  fill: var(--foreground-color);
  box-shadow: 1px 3px 3px #0006;
}

.tool-icon {
  width: 1.75rem;
  height: 1.75rem;
  position: relative;
}

.tool-icon:hover {
  position: relative;
  transform: scale(1.1, 1.1);
}

.tool-icon--hidden {
  display: none;
}

.icon-tabler {
  stroke-width: 1.7px;
}

.subtool-button:hover,
.tool-button:hover {
  background-color: var(--editor-tool-button-hover-background-color);
}

.subtool-button:active,
.tool-button:active {
  background-color: var(--editor-tool-button-active-background-color);
}

.selected .subtool-button:first-child,
.tool-button.selected {
  background-color: var(--editor-tool-button-selected-background-color);
  fill: var(--background-color);
}

.tool-button.selected .icon-tabler {
  stroke: var(--background-color);
}

.multi-tool.selected::after {
  border-right: 5px solid var(--background-color);
}

.subtool-button:not(:first-child) .icon-tabler {
  stroke: var(--foreground-color);
}

#mini-console {
  display: none; /* will be set to 'inherit' when needed */
  z-index: 3;
  position: absolute;
  color: var(--editor-mini-console-foreground-color);
  background-color: var(--editor-mini-console-background-color);
  font-size: 0.8rem;
  padding: 1px 4px 1px 4px;
  bottom: 0;
  right: 0;
}

.text-entry {
  padding: 0.5em;
}

